css/worklist.css
/* ... */
/* Budget info */
#be-block {
    font-size:14px;
    z-index:99;
    top:5px;
}

#be-table {
    border: none;
    padding:2px;
}

#be-block .margin25 {
    margin-top: 25px;
}

.be-table_cell1 {
    border: none;
    padding:2px;
}

.be-table_cell2 {
    border: none;
    text-align: right;
    padding:2px;
}

#be-search {
    float:right;
}

#be-search-lbl {
    float:left;
    font-size:14px;
    font-weight:bold;
    font-style:italic;
    margin-top:5px;
    margin-right:8px;
}

#be-search-field {
    float:left;
    width:180px;
    margin-bottom:5px;
}

#be-search-clean {
    float:right;
    cursor:pointer;
    background:url('../images/cross.png');
    width:24px;
    height:24px;
}

.clickable { cursor:pointer; }

div#quick-links{
  margin-top: 5px;
}

#search-head select[name=user] {
    width:100px;
}

#search-head select[name=status] {
    width: 150px;
}
#search-filter-section select {
    text-align: left;
    width:100px;
}
#search-filter-section  td.textAlignReport div div{
    text-align: left;
}


td.textAlignReport {
    text-align: right;
    padding-top:4px;
    margin:1px;
    width:210px;
}

.report-label,
#search-filter-section td.textAlignReport div div.report-label {
    float: left;
    width: 35%;
    text-align: right;
    padding: 5px 5px 0 0;
}

.report-input-item {
    float: left;
}

.report-item-clear {
    clear: both;
    height: 1px;
}

#search-filter-wrap-reports {
    width: 720px;
}

#searchForm  div > p {
    margin-bottom: 0 !important;
}

#add {
    font-weight: bold;
    color: #6F6F6F;
    font-size: 12px;
}

.floatLeft{
    float: left;
}

.floatRight {
    float: right;
}

.clear {
    clear: both;
}
.hidden {
    display: none;
}
#ping-msg {
    height: 65px;
    width: 356px;
}
#send-ping-btn {
    margin-top: 8px;
}

.taskProject span,
.taskSummaryCell {
    cursor: pointer;
}

.table-worklist td > div,
.table-worklist td > a > div {
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    float: left;
    position: relative;
}

.taskProject {
    width: 92px;
}

.taskSummary {
    width: 510px;
    font-weight: bold;
}

.taskSummary .taskID {
    font-weight: normal;
}

.taskStatus {
    width: 92px;
}

.taskWho {
    width: 104px;
}

.taskAge {
    width: 62px;
    font-size: .7em;
}

.taskWho,
.taskAge {
    color: #999999;
}

.taskComments {
    width: 20px;
}

.table-worklist td div > span:last-child:after,
.fading {
    position: absolute;
    right: 0;
    top: 0;
    width: 30px;
    content: "";
    height: 1.7em;
}

.ui-combobox > .fading {
    right: 32px;
    height: 2em;
}

.taskComments > span:last-child:after,
.taskAge > span:last-child:after {
    background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,0) 100%) transparent !important;
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,0)))  transparent !important;
    background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 100%) transparent !important;
    background: -o-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 100%) transparent !important;
    background: -ms-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 100%) transparent !important;
    background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,0) 100%) transparent !important;
}

.fading,
#searchForm .activeBox:after,
.table-worklist td div > span:last-child:after,
.table-worklist tr:hover > td div > span:last-child:after {
    background: -moz-linear-gradient(left,  rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%) transparent;
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(100%,rgba(255,255,255,1)))  transparent;
    background: -webkit-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) transparent;
    background: -o-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) transparent;
    background: -ms-linear-gradient(left,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) transparent;
    background: linear-gradient(to right,  rgba(255,255,255,0) 0%,rgba(255,255,255,1) 100%) transparent;
}

.rowown > td div > span:last-child:after,
.roweven.rowown > td div > span:last-child:after {
    background: -moz-linear-gradient(left,  rgba(255,204,153,0) 0%, rgba(255,204,153,1) 100%) transparent;
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,204,153,0)), color-stop(100%,rgba(255,204,153,1)))  transparent;
    background: -webkit-linear-gradient(left,  rgba(255,204,153,0) 0%,rgba(255,204,153,1) 100%) transparent;
    background: -o-linear-gradient(left,  rgba(255,204,153,0) 0%,rgba(255,204,153,1) 100%) transparent;
    background: -ms-linear-gradient(left,  rgba(255,204,153,0) 0%,rgba(255,204,153,1) 100%) transparent;
    background: linear-gradient(to right,  rgba(255,204,153,0) 0%,rgba(255,204,153,1) 100%) transparent;
}

.rowbidon > td div > span:last-child:after,
.roweven.rowbidon > td div > span:last-child:after {
    background: -moz-linear-gradient(left,  rgba(153,229,102,0) 0%, rgba(153,229,102,1) 100%) transparent;
    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(153,229,102,0)), color-stop(100%,rgba(153,229,102,1)))  transparent;
    background: -webkit-linear-gradient(left,  rgba(153,229,102,0) 0%,rgba(153,229,102,1) 100%) transparent;
    background: -o-linear-gradient(left,  rgba(153,229,102,0) 0%,rgba(153,229,102,1) 100%) transparent;
    background: -ms-linear-gradient(left,  rgba(153,229,102,0) 0%,rgba(153,229,102,1) 100%) transparent;
    background: linear-gradient(to right,  rgba(153,229,102,0) 0%,rgba(153,229,102,1) 100%) transparent;
}
/* ... */

